WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301321
Potential crash under WebPageProxy::executeEditCommand()
https://bugs.webkit.org/show_bug.cgi?id=301321
Summary
Potential crash under WebPageProxy::executeEditCommand()
Chris Dumez
Reported
2025-10-22 20:48:31 PDT
Potential crash under WebPageProxy::executeEditCommand(): ``` WTFCrashWithInfo(int, char const*, char const*, int) (WebKit) 8 WebKit::AuxiliaryProcessProxy::connection() const (WebKit) ==> 8 WebKit::AuxiliaryProcessProxy::protectedConnection() const (WebKit) <== 8 WebKit::WebPageProxy::executeEditCommand(WTF::String const&, WTF::String const&) (WebKit) 8 -[WKContentView(WKInteraction) pasteForWebView:] (WebKit) 8 __23-[NoteWKWebView paste:]_block_invoke (NotesUI) ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2025-10-22 20:48:42 PDT
<
rdar://145887512
>
Chris Dumez
Comment 2
2025-10-22 20:52:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52855
pascoe@apple.com
Comment 3
2025-10-24 12:11:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52968
EWS
Comment 4
2026-01-06 13:28:31 PST
Committed
305173@main
(99d7f658ab04): <
https://commits.webkit.org/305173@main
> Reviewed commits have been landed. Closing PR #52968 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug