Potential crash under WebPageProxy::executeEditCommand() https://bugs.webkit.org/show_bug.cgi?id=301321 rdar://145887512

Reviewed by NOBODY (OOPS!).

Check that the page has a running process before trying to send the IPC.
We were doing this outside the lambda already but since the lambda may
run asynchronously, we should check again once the lambda runs.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::executeEditCommand):